# homepage

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.build  README.md  docker-compose.yml  package.json  tailwind.config.ts
.github/workflows/: docker-build.yml
client/: Cargo.toml  Trunk.toml  index.html
client/site/pkg/: index.html  lib.css  w9_homepage_client.d.ts  w9_homepage_client.js  w9_homepage_client_bg.wasm  w9_homepage_client_bg.wasm.d.ts
client/src/: components.rs  lib.css  lib.rs
client/src/pages/: home.rs  mod.rs
public/: sitemap.xml
server/: Cargo.toml
server/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Footer.tsx  Header.tsx  NetworkBar.tsx
src/components/ui/: Button.tsx  Card.tsx
